test/corpus/lines.txt
================================================================================
Bare label with header comment
================================================================================

XINDEX ;ISC/REL,GFT,GRK,RWF - INDEX

--------------------------------------------------------------------------------

(source_file
  (line
    (label)
    (comment)))

================================================================================
Label with formals
================================================================================

EX(A,B,C) ;formals

--------------------------------------------------------------------------------

(source_file
  (line
    (label)
    (formals
      (identifier)
      (identifier)
      (identifier))
    (comment)))

================================================================================
Label with empty formals
================================================================================

ZERO()

--------------------------------------------------------------------------------

(source_file
  (line
    (label)
    (formals)))

================================================================================
Leading-space comment line
================================================================================

 ; just a comment

--------------------------------------------------------------------------------

(source_file
  (line
    (comment)))

================================================================================
Doubled-semicolon documentation line
================================================================================

 ;;7.3;TOOLKIT;**20**

--------------------------------------------------------------------------------

(source_file
  (line
    (comment)))

================================================================================
Blank line followed by command line
================================================================================

 BREAK

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)))))

================================================================================
Label-only line (no body, no comment)
================================================================================

LOOP

--------------------------------------------------------------------------------

(source_file
  (line
    (label)))

================================================================================
Trailing single space after argless command before EOL
================================================================================

 Q 

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)))))

================================================================================
Trailing single space after command-with-args
================================================================================

 S X=1 

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (number))))))))

================================================================================
Trailing space after argless command chain
================================================================================

 D ^FOO Q 

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (variable
              (global_variable
                (identifier))))))
      (command
        (command_keyword)))))

================================================================================
Dot-block prefix followed by comment (no command)
================================================================================

 . ;commented out

--------------------------------------------------------------------------------

(source_file
  (line
    (dot_block_prefix)
    (comment)))

================================================================================
Numeric label (M line-number labels)
================================================================================

5 S X=1

--------------------------------------------------------------------------------

(source_file
  (line
    (label)
    (command_sequence
      (command
        (command_keyword)
        (argument_list
          (argument
            (binary_expression
              (variable (local_variable (identifier)))
              (operator)
              (number))))))))
